option('hestia', type: 'feature', value: 'disabled')
option('ldiskfs', type: 'feature', value: 'disabled')
option('lustre', type: 'feature', value: 'disabled')
option('man', type: 'feature', value: 'enabled')
option('mfu', type: 'feature', value: 'disabled')
option('mongo', type: 'feature', value: 'enabled')
option('s3', type: 'feature', value: 'disabled')
option('sqlite', type: 'feature', value: 'disabled')
