# This file is part of the RobinHood Library
# Copyright (C) 2019 Commissariat a l'energie atomique et aux energies
# 		      alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later
#
# author: Quentin Bouget <quentin.bouget@cea.fr>

include_HEADERS = robinhood.h

robinhooddir = $(includedir)/robinhood
robinhood_HEADERS = robinhood/fsentry.h \
		    robinhood/iterator.h \
		    robinhood/itertools.h \
		    robinhood/statx.h
