# This file is part of the RobinHood Library
# Copyright (C) 2019 Commissariat a l'energie atomique et aux energies
# 		      alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later
#
# author: Quentin Bouget <quentin.bouget@cea.fr>

include $(top_srcdir)/template.mk.am

lib_LTLIBRARIES = librobinhood.la
librobinhood_la_SOURCES = ../src/fsentry.c
