# This file is part of RobinHood 4
# Copyright (C) 2024 Commissariat a l'energie atomique et aux energies
#            alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

# GNU extensions
executable(
    'rbh-capabilities',
    sources: [
        'rbh-capabilities.c',
        ],
    dependencies: [librobinhood_dep],
    install: true,
)

subdir('tests')
