# This file is part of RobinHood 4
# Copyright (C) 2025 Commissariat a l'energie atomique et aux energies
# 		      alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

executable(
	'rbh-lfind',
	sources: [
		'rbh-find-lustre.c',
		],
	dependencies: [librobinhood_dep, librbhfind_dep, liblustre],
	install: true,
)
