# This file is part of RobinHood
# Copyright (C) 2025 Commissariat a l'energie atomique et aux energies
#                    alternatives
#
# SPDX-License-Identifier: LGPL-3.0-or-later

executable(
    'rbh-gc',
    sources: [
        'rbh-gc.c',
    ],
    dependencies: [librobinhood_dep],
    install: true,
)

subdir('tests')
