# This file is part of RobinHood 4
# Copyright (C) 2024 Commissariat a l'energie atomique et aux energies
#            alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

executable(
    'rbh-info',
    sources: [
        'rbh-info.c',
    ],
    dependencies: [librobinhood_dep],
    install: true,
)

subdir('tests')
