# This file is part of Robinhood 4
# Copyright (C) 2019 Commissariat a l'energie atomique et aux energies
#                    alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

executable(
    'rbh-sync',
    sources: [
        'rbh-sync.c',
    ],
    dependencies: [librobinhood_dep],
    install: true,
)

subdir('tests')
