# This file is part of RobinHood 4
# Copyright (C) 2025 Commissariat a l'energie atomique et aux energies
#            alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

executable(
    'rbh-undelete',
    sources: [
        'rbh-undelete.c',
    ],
    dependencies: [librobinhood_dep],
    install: true,
)
